# Hbar-Wallet-Desktop

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md
include/crypto/: encryption.h  keypair.h
include/network/: hedera_client.h  rest_client.h
include/storage/: config.h  wallet_storage.h
include/ui/: create_wallet_dialog.h  main_window.h  receive_dialog.h  send_dialog.h  settings_dialog.h
include/utils/: converter.h  logger.h
include/wallet/: account.h  storage.h  transaction.h  wallet.h
resources/: resources.qrc
scripts/: build-windows.bat
src/: main.cpp
src/crypto/: encryption.cpp  keypair.cpp
src/network/: hedera_client.cpp  rest_client.cpp
src/storage/: config.cpp  wallet_storage.cpp
src/ui/: create_wallet_dialog.cpp  main_window.cpp  receive_dialog.cpp  send_dialog.cpp  settings_dialog.cpp
src/utils/: converter.cpp  logger.cpp
src/wallet/: account.cpp  transaction.cpp  wallet.cpp
tests/: CMakeLists.txt  test_wallet.cpp
